# VSM

./: Cargo.toml  README.md
src/: dict_term.rs  doc_vec.rs  lib.rs  main.rs  presets.rs  vector.rs  weight.rs
tests/: build.rs
