[package]
name = "vsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
bincode = "*"
index_framework = { path = "../index_framework" }
sorted_intersection = "*"
