[package]
name = "vsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
index_framework = { git = "https://github.com/WeDontPanic/index_framework" }
intersect_iter = "0.1.0"
